Remove references to sun.* classes to be able to compile with JDK24
Motivation:

Compilation with JDK24 might fail when sun.misc.Unsafe is directly referenced in the source code. We can remove the direct reference of it by using MethodHandles.

Modifications:

- Move sun.misc.Unsafe access to new class SunMiscUnsafeAccess and use
MethodHandles to call it

Result:

Be able to compile on JDK24+